缩放区域修改

--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -120,9 +120,14 @@
           overflow-y: auto;
           background-color: @fff;
           padding: 30px;
+          .drag-warp-bg{
+            height: 100%;
+            width: 100%;
+            background-color: @F1F3F7;
+          }
           .drag-content{
             width: 1200px;
-            min-height: 100% !important;
+            min-height: 550px !important;
             transform-origin: 0 0;
             margin-left: auto;
             margin-right: auto;
