--- a/static/assets/other/gridstack/update_class.css
+++ b/static/assets/other/gridstack/update_class.css
@@ -1,5 +1,7 @@
 .jl_vip_zt_warp{
     position: relative;
+}
+.jl_vip_zt_warp_preview .jl_vip_zt_warp{
     height: 100%;
 }
 .jl_vip_zt_warp .jl_vip_zt_del{
