--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -121,7 +121,7 @@
           background-color: @fff;
           padding: 30px;
           .drag-warp-bg{
-            height: 100%;
+            min-height: 100%;
             width: 100%;
             background-color: @F1F3F7;
           }
