--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -973,3 +973,21 @@ iframe {
     margin-right: 10px;
   }
 }
+/*后台管理系统-数据为空提示**/
+.empty-data-admin::after{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  content: '暂无数据';
+  font-size: 14px;
+  color: #5e6d82;
+  line-height: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: inherit;
+}
