--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -974,6 +974,9 @@ iframe {
   }
 }
 /*后台管理系统-数据为空提示**/
+.empty-data-admin{
+  position: relative;
+}
 .empty-data-admin::after{
   position: absolute;
   width: 100%;
