--- a/src/assets/admin/css/form.less
+++ b/src/assets/admin/css/form.less
@@ -586,10 +586,12 @@
     position: relative;
     transition: all .3s;
     cursor: pointer;
+    
     &:hover{
       border: 2px solid #6777ef;
       box-shadow: 1px 5px 20px #dedede;
       background-size: 95% 95% !important;
+      
     }
     .temp-name{
       display: none;
@@ -603,6 +605,7 @@
       width: 74px;
       height: 28px;
       padding: 6px 14px;
+      z-index: 5;
       i{
         font-size: 14px;
       }
@@ -615,11 +618,33 @@
         vertical-align: bottom;
       }
     }
+    /deep/.el-button--primary{
+      color: #6777EF;
+      background-color: rgba(255,255,255,0.55);
+      border-color: #ABB4F6;
+      border: 1px solid #ABB4F6;
+    }
   }
   .d-temp-box-check{
     border: 2px solid #6777ef;
     box-shadow: 1px 5px 20px #dedede;
     background-size: 95% 95% !important;
+    &::before{
+      content: '';
+      z-index: 2;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+      bottom: 0;
+      height: 60px;
+      right: 0;
+      left: 0;
+      position: absolute;
+    }
+    /deep/.el-button--primary{
+      color: #fff;
+      background-color: #6777EF;
+      border-color: #6777EF;
+      border: 1px solid #6777EF;
+    }
   }
   /**高级设置按钮*/
   .higher-set{
