--- a/src/assets/public/css/public.less
+++ b/src/assets/public/css/public.less
@@ -1,51 +1,58 @@
 @charset "UTF-8";
-* {
+/***滚动条样式**/
+*::-webkit-scrollbar {width:10px;height: 10px;}
+*::-webkit-scrollbar-button {display: none;}
+*::-webkit-scrollbar-track {background-color: #ddd;}
+*::-webkit-scrollbar-track-piece {background: #f8f8f8;}//滚动条底部颜色
+*::-webkit-scrollbar-thumb {background-color: #ddd;border-radius: 0px;}
+*::-webkit-scrollbar-thumb:hover {background-color: #ddd;}
+*::-webkit-scrollbar-corner {background-color: #ddd;}
+*::-webkit-scrollbar-resizer {background-color: #ddd;}
+.el-aside{//针对火狐浏览器，后台-左侧菜单
+	overflow-y: scroll;
+	overflow-x: hidden;
+	scrollbar-width: thin;//滚动条变细，为none时隐藏滚动条
+}
+/**样式重置**/
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -moz-box-sizing:border-box;
+  -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust:none;
 }
-header,footer,section,article,aside,nav,hgroup,address,figure,figcaption,menu,details{display:block;}
-
-table{border-collapse:collapse;border-spacing:0;}
-
-caption,th{text-align:left;font-weight:normal;}
-
-html,body,fieldset,img,iframe,abbr{border:0;}
-
-i,cite,em,var,address,dfn{font-style:normal;}
-
-[hidefocus],summary{outline:0;}
-
-li{list-style:none;}
-
-h1,h2,h3,h4,h5,h6,small{font-size:100%;}
-
-sup,sub{font-size:83%;}
-
-pre,code,kbd,samp{font-family:inherit;}
-
-q:before,q:after{content:none;}
-
-textarea{overflow:auto;resize:none;}
-
-label,summary{cursor:default;}
-
-a,button{cursor:pointer;}
-
-h1,h2,h3,h4,h5,h6,em,strong,b{font-weight:bold;}
-
-del,ins,u,s,a,a:hover{text-decoration:none;}
-
-body,textarea,input,button,select,keygen,legend{font:12px/1.14 arial,\5b8b\4f53;color:#333;outline:0;}
-
-body{background:#fff;}
-
-a,a:hover{color:#333;}
 html,
 body,
 .admin-warp-app{
   width: 100%;
   height: 100%;
   font-size: 14px;
-  font-family: 'microsoft yahei','Avenir', Helvetica, Arial, sans-serif;
+  font-family:'Microsoft YaHei',helvetica,Arial,Verdana,Sans-serif;
+}
+a{
+  cursor: pointer;
+  line-height: inherit;
+  text-decoration: none;
+}
+iframe {
+  border: none;
+}
+i{
+  font-style: inherit;
+}
+ol,
+ul {
+  list-style: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+button,input,textarea{
+  outline: none;
+}
+button{
+  cursor: pointer;
 }
