--- a/src/components/admin/scene - 副本/scene_set.less
+++ b/src/components/admin/scene - 副本/scene_set.less
@@ -11,7 +11,7 @@
       box-shadow: 2px 0px 5px rgba(0,0,0,.13);
     }
   }
-  .admin-content{
+  .content{
     background-color: @fff;
     border-radius: 4px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
