更改了头部底部

--- a/src/assets/public/css/public.less
+++ b/src/assets/public/css/public.less
@@ -9,7 +9,7 @@
 *::-webkit-scrollbar-corner {background-color: #ddd;}
 *::-webkit-scrollbar-resizer {background-color: #ddd;}
 .el-aside{//针对火狐浏览器，后台-左侧菜单
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 	scrollbar-width: thin;//滚动条变细，为none时隐藏滚动条
 }
