--- a/src/assets/admin/css/case/case.less
+++ b/src/assets/admin/css/case/case.less
@@ -111,6 +111,11 @@
         min-height: 150px;
         max-height: 542px;
         overflow: hidden;
+        display: grid;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        grid-template-columns: repeat(auto-fill, 238px);
       }
     }
     /**推荐场景**/
