增加组件全屏按钮

--- a/src/components/admin/scene/model/model.less
+++ b/src/components/admin/scene/model/model.less
@@ -321,3 +321,27 @@
     width: 100%;
     margin: 10px 0;
   }
+  .row-switch{
+    padding-top: 80px;
+    .title{
+      font-size: 14px;
+      color: @34395E;
+      padding-left:5px;
+    }
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
