--- a/src/components/admin/scene/model/model.less
+++ b/src/components/admin/scene/model/model.less
@@ -131,6 +131,7 @@
       margin-left: 5px;
       border-radius: 4px;
       float: left;
+      background-size: 100% 100%;
       div{
         position: absolute;
         width: 100%;
