--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -120,6 +120,9 @@
           overflow-y: auto;
           background-color: @fff;
           padding: 30px;
+          .scene-warp-bg{
+            background-size: 100% 100%;
+          }
           .drag-warp-bg{
             min-height: 100%;
             width: 100%;
@@ -132,6 +135,7 @@
             margin-left: auto;
             margin-right: auto;
             border: 1px dashed @BCBCBC;
+            background: rgba(255,255,255,0);
           }
           img{
             width: 1198px;
