--- a/src/assets/public/css/public.less
+++ b/src/assets/public/css/public.less
@@ -29,6 +29,7 @@ body,
   width: 100%;
   height: 100%;
   font-size: 14px;
+  scroll-behavior:smooth;
   font-family:'Microsoft YaHei',helvetica,Arial,Verdana,Sans-serif;
 }
 a{
