样式修改，多余页面删除

--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -205,6 +205,7 @@
           }
           /****新增按钮 */
           .s-b-add{
+            margin-right: 0 !important;
             background: #E4E6FC;
           }
         }
