--- a/src/components/admin/scene/model/model.less
+++ b/src/components/admin/scene/model/model.less
@@ -326,12 +326,18 @@
     margin: 10px 0;
   }
   .row-switch{
-    padding-top: 80px;
+    padding-top: 70px;
+    padding-bottom: 5px;
+    border-radius: 2px;
+    background: #eff2f3;
     .title{
       font-size: 14px;
       color: @34395E;
       padding-left:5px;
     }
+  }
+  .mt-5{
+    margin-top: 5px;
   }
 
 
