--- a/static/assets/other/gridstack/update_class.css
+++ b/static/assets/other/gridstack/update_class.css
@@ -36,6 +36,7 @@
     bottom: 0;
     top: 0;
     z-index: 10;
+    border: 1px solid #bdc4ff;
     background-color: rgba(0,0,0,0);
 }
 .jl_vip_zt_warp .mask-layer-active{
