--- a/static/assets/other/gridstack/update_class.css
+++ b/static/assets/other/gridstack/update_class.css
@@ -40,5 +40,5 @@
     background-color: rgba(0,0,0,0);
 }
 .jl_vip_zt_warp .mask-layer-active{
-    border: 1px dashed #6777EF;
+    border: 3px dashed #001eff;
 }
