--- a/static/assets/other/gridstack/gridstack.css
+++ b/static/assets/other/gridstack/gridstack.css
@@ -12,7 +12,7 @@
     .grid-stack.grid-stack-rtl > .grid-stack-item {
       direction: rtl; }
   .grid-stack .grid-stack-placeholder > .placeholder-content {
-    border: 1px dashed rgb(255, 0, 0);
+    border: 2px dashed red;
     margin: 0;
     position: absolute;
     width: auto;
