--- a/src/assets/admin/font/iconfont.css
+++ b/src/assets/admin/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3145988 */
-  src: url('iconfont.woff2?t=1645497647047') format('woff2'),
-       url('iconfont.woff?t=1645497647047') format('woff'),
-       url('iconfont.ttf?t=1645497647047') format('truetype');
+  src: url('iconfont.woff2?t=1659430861724') format('woff2'),
+       url('iconfont.woff?t=1659430861724') format('woff'),
+       url('iconfont.ttf?t=1659430861724') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,30 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.el-icon-vip-shouqi1:before {
+  content: "\e678";
+}
+
+.el-icon-vip-zhankai1:before {
+  content: "\e679";
+}
+
+.el-icon-vip-shoucang1:before {
+  content: "\e676";
+}
+
+.el-icon-vip-gengduozhuanti:before {
+  content: "\e677";
+}
+
+.el-icon-vip-sousuo:before {
+  content: "\e675";
+}
+
+.el-icon-vip-a-lujing12:before {
+  content: "\e674";
 }
 
 .el-icon-vip-shouqi:before {
