--- a/src/components/admin/scene/model/model.less
+++ b/src/components/admin/scene/model/model.less
@@ -335,11 +335,14 @@
         margin-top: 10px;
 
         .s-edit {
+          font-size: 20px;
           cursor: pointer;
           color: @6777EF;
           float: right;
           user-select: none;
-
+          i{
+            font-weight: bold;
+          }
           &:hover {
             opacity: 0.9;
           }
@@ -347,6 +350,9 @@
           &:active {
             opacity: 1;
           }
+        }
+        .s-del{
+          margin-left: 10px;
         }
       }
 
