--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -31,6 +31,7 @@
         height: 100%;
         min-height: 700px;
         padding: 0 20px;
+        padding-bottom: 20px;
         overflow-y: auto;
         &::-webkit-scrollbar {width:3px;height: 5px;}
         &::-webkit-scrollbar-button {display: none;}
