--- a/src/components/admin/scene/model/model.less
+++ b/src/components/admin/scene/model/model.less
@@ -196,7 +196,7 @@
     width: 25px;
     height: 25px;
     font-size: 14px;
-    padding: 5px;
+    padding: 6px 5px;
     color: #F56C6C;
     text-align: center;
     background: rgba(255,255,255,0.7);
