--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -122,7 +122,7 @@
           background-color: @fff;
           padding: 30px;
           .scene-warp-bg{
-            background-size: 100% 100%;
+            background-size: 100% 100% !important;
           }
           .drag-warp-bg{
             min-height: 100%;
