--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -12,19 +12,19 @@
     }
   }
   .admin-content{
-    background-color: @fff;
+    background-color: #fff;
     border-radius: 4px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
     height: 100%;
     .drag-content{
       min-height: 550px;
       position: relative;
-      background-color: @F1F3F7;
+      background-color: #F1F3F7;
       .drag-l,.drag-c,.drag-r{
         position: absolute;
         bottom: 0;
         top: 0;
-        background-color: @fff;
+        background-color: #fff;
       }
       .drag-l-pad,.drag-r-pad{
         width: 100%;
@@ -52,7 +52,7 @@
           top:50%;
           margin-top: -33px;
           position: absolute;
-          color: @fff;
+          color:#fff;
           width: 18px;
           height: 65px;
           text-align: center;
@@ -109,7 +109,7 @@
         left: 289px;
         right: 289px;
         z-index: 1;
-        background-color: @F1F3F7;
+        background-color: #F1F3F7;
         .scaling-right{
           margin-left: auto;
           margin-top:30px;
@@ -119,15 +119,15 @@
           min-width: 430px;//30%
           height:calc(100% - 80px);
           overflow-y: auto;
-          background-color: @fff;
+          background-color:#fff;
           padding: 30px;
           .scene-warp-bg{
             background-size: 100% 100% !important;
           }
           .drag-warp-bg{
-            min-height: 100%;
+            // min-height: 100%;
             width: 100%;
-            background-color: @F1F3F7;
+            background-color: #F1F3F7;
           }
           .drag-content{
             width: 1200px;
@@ -135,7 +135,7 @@
             transform-origin: 0 0;
             margin-left: auto;
             margin-right: auto;
-            border: 1px dashed @BCBCBC;
+            border: 1px dashed #BCBCBC;
             background: rgba(255,255,255,0);
           }
           img{
@@ -154,8 +154,8 @@
           .default-btn-n-border{
             margin-bottom: 20px;
             width: 126px;
-            background-color: @C5CFE0;
-            color: @34395E;
+            background-color: #C5CFE0;
+            color: #34395E;
             margin-right:40px;
             margin-left: 0;
             position: relative;
@@ -170,7 +170,7 @@
               right: -5px;
               top: -5px;
               bottom: -5px;
-              border: 1px dashed @BCBCBC;
+              border: 1px dashed #BCBCBC;
             }
             .txt-show,.txt-edit{
               display: block;
@@ -188,7 +188,7 @@
               cursor: auto;
               
               padding: 0 5px;
-              border: 1px solid @C5CFE0;
+              border: 1px solid #C5CFE0;
             }
             .s-b-d-close{
               position: absolute;
@@ -197,7 +197,7 @@
               display: none;
               z-index: 3;
               font-size: 16px;
-              color: @6C757D;
+              color: #6C757D;
               &:hover{
                 opacity: .8;
               }
@@ -228,7 +228,7 @@
           }
           /***首屏选中效果-不显示删除按钮 */
           .s-b-active{
-            color: @fff;
+            color: #fff;
             background: linear-gradient(353deg, #9985FF 0%, #9985FF 54%, #A18FFF 56%, #A18FFF 100%);
             .s-btn-edit{
               display: block;
@@ -236,7 +236,7 @@
           }
           /***选中效果 */
           .s-b-active-close{
-            color: @fff;
+            color: #fff;
             background: linear-gradient(353deg, #9985FF 0%, #9985FF 54%, #A18FFF 56%, #A18FFF 100%);
             .s-b-d-close,.s-btn-edit{
               display: block;
