--- a/src/components/admin/scene/scene_set.css
+++ b/src/components/admin/scene/scene_set.css
@@ -171,7 +171,7 @@
   margin-left: auto;
   margin-right: auto;
   border: 1px dashed #BCBCBC;
-  background: rgba(255, 255, 255, 0);
+  background-color: #F1F3F7;
 }
 .admin-content .drag-content .drag-c .drag-container img {
   width: 1198px;
