--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -136,7 +136,7 @@
             margin-left: auto;
             margin-right: auto;
             border: 1px dashed #BCBCBC;
-            background: rgba(255,255,255,0);
+            background-color: #F1F3F7;
           }
           img{
             width: 1198px;
