--- a/src/assets/admin/css/table.less
+++ b/src/assets/admin/css/table.less
@@ -4,27 +4,27 @@
 
 .search-table-general{
     .color-blue{
-        color: @8CC63F;
+        color: @fun-col-g2;
     }
     .color-red{
-        color: @F56C6C;
+        color: @fun-col-r1;
     }
     /**表格***/
     .table-w{
-        background-color: @fff;
+        background-color: @m-col-b0;
         margin-top: 4px;
         border-radius: 4px;
         .admin-m-title{
             padding:0 20px;
             height: 64px;
             line-height: 64px;
-            border-bottom: 1px solid @EBEEF5;
+            border-bottom: 1px solid @ph-col-n3;
         }
         .t-p{
             padding: 20px;
             .admin-table{
-                border-left: 1px solid @EBEEF5;
-                border-right: 1px solid @EBEEF5;
+                border-left: 1px solid @ph-col-n3;
+                border-right: 1px solid @ph-col-n3;
             }
             .next-btn{
                 margin-top: 30px;
