--- a/src/assets/admin/css/case/case.less
+++ b/src/assets/admin/css/case/case.less
@@ -3,15 +3,15 @@
     padding-bottom:20px;
   }
   .content{
-    background-color: @fff;
+    background-color: @m-col-b0;
     border-radius: 4px 4px 0 0 ;
     .s-w{
       min-height: 60px;
       line-height: 57px;
       padding: 0 20px;
-      border-bottom: 1px solid @EBEEF5;
+      border-bottom: 1px solid @ph-col-n3;
       .d-title{
-        color: @34395E;
+        color: @ph-col-n12;
         font-size: 14px;
         margin-left: 20px;
       }
@@ -24,12 +24,12 @@
   /***内容板块***/
   .list-content{
     min-height: 300px;
-    background-color: @fff;
+    background-color: @m-col-b0;
     border-radius: 0 0 4px 4px;
     .row{
       padding: 10px;
       .title{
-        color: @34395E;
+        color: @ph-col-n12;
         font-size: 14px;
         font-weight: bold;
         line-height: 20px;
@@ -44,7 +44,7 @@
           content: '';
           width: 5px;
           height: 5px;
-          background-color: @6677EF;
+          background-color: @m-col-b9;
           border-radius: 50%;
         }
       }
@@ -70,7 +70,7 @@
         span.name{
           display: block;
           height: 60px;
-          color: @34395E;
+          color: @ph-col-n12;
           font-size: 14px;
           line-height: 60px;
           text-align: center;
@@ -88,7 +88,7 @@
           cursor: pointer;
           display: none;
           position: absolute;
-          background: @F5F6FB;
+          background: @m-col-b2;
           height: 44px;
           width: 44px;
           right: 5px;
@@ -97,7 +97,7 @@
           border-radius: 50%;
           font-size: 15px;
           &:active{
-            color: @6777EF;
+            color: @m-col-b7;
           }
         }
         &:hover{
@@ -162,7 +162,7 @@
 //         padding-left: 15px;
 //       }
 //       .log-warp{
-//         background-color: @fff;
+//         background-color: @m-col-b0;
 //         border: 1px solid #EBEEF5;
 //         box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
 //         border-radius: 3px;
@@ -171,18 +171,18 @@
 //           line-height: 60px;
 //           padding: 0 20px;
 //           display: block;
-//           border-bottom: 1px solid @EBEEF5;
+//           border-bottom: 1px solid @ph-col-n3;
 //         }
 //         .log-content{
 //           height: 342px;
 //           padding: 25px;
-//           color:@6C757D;
+//           color:@ph-col-n10;
 //           font-size: 16px;
 //           .line{
 //             display: block;
 //             padding-top: 22px;
 //             margin-bottom: 22px;
-//             border-bottom: 1px solid @EBEEF5;
+//             border-bottom: 1px solid @ph-col-n3;
 //           }
 //           .circle{
 //             padding-left:35px;
