--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -10,7 +10,7 @@
 }
 
 .admin-bg-top {
-  background: @F4F7FC url(../img/center-bg1.png) no-repeat right top;
+  background: @ph-col-n2 url(../img/center-bg1.png) no-repeat right top;
   background-size: 100% auto;
 }
 .admin-bg-top1 {
@@ -122,7 +122,7 @@ iframe {
 
 /**蓝色标题带图标**/
 .m-title {
-  color: @6777EF;
+  color: @m-col-b7;
   font-weight: bold;
   font-size: 16px;
   position: relative;
@@ -140,16 +140,16 @@ iframe {
       position: relative;
       font-size: 16px;
       font-weight: bold;
-      color: @34395E;
+      color: @ph-col-n12;
       padding: 0 20px;
       cursor: pointer;
     }
     .number {
-      color: @F56C6C;
+      color: @fun-col-r1;
       padding: 0 0 0 10px;
     }
     span.active {
-      color: @6777EF;
+      color: @m-col-b7;
 
       &::after {
         content: "";
@@ -159,7 +159,7 @@ iframe {
         height: 1px;
         // bottom: -20px;
         bottom: 1px;
-        border-bottom: 2px solid @6777EF;
+        border-bottom: 2px solid @m-col-b7;
       }
     }
   }
@@ -172,20 +172,20 @@ iframe {
     float: right;
 
     .blue-btn {
-      background-color: @8CC63F;
-      border: 1px solid @8CC63F;
+      background-color: @fun-col-g2;
+      border: 1px solid @fun-col-g2;
     }
 
     .red-btn {
-      background-color: @F56C6C;
-      border: 1px solid @F56C6C;
-      color: @fff;
+      background-color: @fun-col-r1;
+      border: 1px solid @fun-col-r1;
+      color: @m-col-b0;
     }
 
     .gray-btn {
-      color: @34395E;
-      background-color: @F0F0F0;
-      border: 1px solid @F0F0F0;
+      color: @ph-col-n12;
+      background-color: @ph-col-n6;
+      border: 1px solid @ph-col-n6;
     }
   }
   .more-r {
@@ -197,7 +197,7 @@ iframe {
 /**居右-更多加右箭头**/
 .more-r {
   float: right;
-  color: @6C757D;
+  color: @ph-col-n10;
   font-weight: 400;
   font-size: 14px;
   user-select: none;
@@ -218,7 +218,7 @@ iframe {
     cursor: pointer;
     line-height: 40px;
     font-size: 14px;
-    color: @6C757D;
+    color: @ph-col-n10;
     padding: 0 15px;
 
     i {
@@ -232,7 +232,7 @@ iframe {
     }
 
     &:hover {
-      background-color: @F5F6FB;
+      background-color: @m-col-b2;
     }
   }
 }
@@ -244,8 +244,8 @@ iframe {
 
   .num {
     font-size: 13px;
-    color: @fff;
-    background-color: @34395E;
+    color: @m-col-b0;
+    background-color: @ph-col-n12;
     display: inline-block;
     width: 18px;
     height: 18px;
@@ -265,12 +265,12 @@ iframe {
       right: -2px;
       bottom: -2px;
       border-radius: 50%;
-      border: 1px solid @34395E;
+      border: 1px solid @ph-col-n12;
     }
   }
 
   .txt {
-    color: @34395E;
+    color: @ph-col-n12;
     font-size: 16px;
     font-weight: bold;
     vertical-align: middle;
@@ -278,7 +278,7 @@ iframe {
 
   .r-select {
     cursor: pointer;
-    color: @6777EF;
+    color: @m-col-b7;
     font-size: 14px;
     font-weight: 400px;
     position: absolute;
@@ -321,12 +321,12 @@ iframe {
   font-size: 18px;
   line-height: 64px;
   height: 64px;
-  color: @34395E;
+  color: @ph-col-n12;
   font-weight: bold;
   padding-bottom: 30px;
   padding: 0 20px;
-  background-color: @fff;
-  border-bottom: 1px solid @EBEEF5;
+  background-color: @m-col-b0;
+  border-bottom: 1px solid @ph-col-n3;
   border-radius: 4px;
 
   .r-btn {
@@ -343,30 +343,30 @@ iframe {
 
 /************表单样式**********/
 .el-radio__input.is-checked .el-radio__inner {
-  border-color: @6777EF !important;
-  background: @6777EF !important;
+  border-color: @m-col-b7 !important;
+  background: @m-col-b7 !important;
 }
 
 .el-radio__input.is-checked + .el-radio__label {
-  color: @6777EF !important;
+  color: @m-col-b7 !important;
 }
 
 .el-checkbox__input.is-checked .el-checkbox__inner,
 .el-checkbox__input.is-indeterminate .el-checkbox__inner {
-  border-color: @6777EF;
-  background: @6777EF;
+  border-color: @m-col-b7;
+  background: @m-col-b7;
 }
 
 .el-checkbox__input.is-checked + .el-checkbox__label {
-  color: @6777EF;
+  color: @m-col-b7;
 }
 
 .el-tabs__item.is-active {
-  color: @6777EF;
+  color: @m-col-b7;
 }
 
 .el-tabs__active-bar {
-  background: @6777EF;
+  background: @m-col-b7;
 }
 
 .el-input__prefix {
@@ -384,83 +384,83 @@ iframe {
 }
 
 .el-input__inner {
-  border: 1px solid @E4E6FC;
+  border: 1px solid @m-col-b4;
 }
 
 .el-input__inner:focus {
-  border: 1px solid @6777EF;
+  border: 1px solid @m-col-b7;
 }
 .el-switch.is-checked .el-switch__core {
-  border-color: @6777EF;
-  background-color: @6777EF;
+  border-color: @m-col-b7;
+  background-color: @m-col-b7;
 }
 .el-tabs__item:hover {
-  color: @6777EF;
+  color: @m-col-b7;
   cursor: pointer;
 }
 .el-radio-button__orig-radio:checked + .el-radio-button__inner {
   color: #fff;
-  background-color: @6777EF;
-  border-color: @6777EF;
-  -webkit-box-shadow: -1px 0 0 0 @6777EF;
-  box-shadow: -1px 0 0 0 @6777EF;
+  background-color: @m-col-b7;
+  border-color: @m-col-b7;
+  -webkit-box-shadow: -1px 0 0 0 @m-col-b7;
+  box-shadow: -1px 0 0 0 @m-col-b7;
 }
 .el-radio-button__inner:hover {
-  color: @6777EF;
+  color: @m-col-b7;
 }
 .el-radio-button__orig-radio:disabled:checked + .el-radio-button__inner {
-  background-color: @6777EF;
+  background-color: @m-col-b7;
 }
 .el-textarea__inner:focus {
   outline: 0;
-  border-color: @6777EF;
+  border-color: @m-col-b7;
 }
 // 文字按钮默认字体颜色
 .el-button--text {
-  color: @6777EF;
+  color: @m-col-b7;
 }
 // 选择输入框 默认颜色
 .el-select .el-input.is-focus .el-input__inner {
-  border-color: @6777EF;
+  border-color: @m-col-b7;
 }
 .el-select .el-input__inner:focus {
-  border-color: @6777EF;
+  border-color: @m-col-b7;
 }
 // 日期选择器默认样式修改
 .el-range-editor.is-active,
 .el-range-editor.is-active:hover {
-  border-color: @6777EF;
+  border-color: @m-col-b7;
 }
 .el-date-table td.end-date span,
 .el-date-table td.start-date span {
-  background-color: @6777EF;
+  background-color: @m-col-b7;
 }
 .el-date-table td.available:hover {
-  color: @6777EF;
+  color: @m-col-b7;
 }
 // select 选择框默认样式修改
 .el-select-dropdown__item.selected {
-  color: @6777EF;
+  color: @m-col-b7;
   font-weight: 700;
 }
 .el-date-table td.today span {
-  color: @6777EF;
+  color: @m-col-b7;
   font-weight: 700;
 }
 // 分页 每页条数选择 hover
 .el-pagination__sizes .el-input .el-input__inner:hover {
-  border-color: @6777EF;
+  border-color: @m-col-b7;
 }
 // 多级选择样式
 .el-cascader-node.in-active-path,
 .el-cascader-node.is-active,
 .el-cascader-node.is-selectable.in-checked-path {
-  color: @6777EF;
+  color: @m-col-b7;
   font-weight: 700;
 }
 .el-cascader .el-input .el-input__inner:focus,
 .el-cascader .el-input.is-focus .el-input__inner {
-  border-color: @6777EF;
+  border-color: @m-col-b7;
 }
 /******标签页样式重置*****/
 .tabs-check {
@@ -474,23 +474,23 @@ iframe {
   }
 
   .el-tabs__item {
-    color: @34395E;
+    color: @ph-col-n12;
     height: 60px;
     font-size: 16px;
     line-height: 60px;
   }
 
   .el-tabs__item.is-active {
-    color: @34395E;
+    color: @ph-col-n12;
     font-size: 16px;
   }
 
   .el-tabs__active-bar {
-    background-color: @6777EF;
+    background-color: @m-col-b7;
   }
 
   .el-tabs__item:hover {
-    color: @6777EF;
+    color: @m-col-b7;
   }
 
   .el-tabs__content {
@@ -502,8 +502,8 @@ iframe {
 /**********按钮样式重置***************/
 .default-btn-n-border {
   //无边框 浅色背景，蓝色问题
-  color: @6777EF;
-  background-color: @F9F8FF;
+  color: @m-col-b7;
+  background-color: @m-col-b3;
   border-radius: 3px;
   border: none;
   height: 32px;
@@ -511,8 +511,8 @@ iframe {
 
 .default-btn-border {
   //有边框 浅色背景，蓝色问题
-  color: @6777EF;
-  background-color: @F9F8FF;
+  color: @m-col-b7;
+  background-color: @m-col-b3;
   border-radius: 3px;
   border: 1px solid #9cadff;
   height: 32px;
@@ -520,40 +520,40 @@ iframe {
 
 .el-button:focus,
 .el-button:hover {
-  color: @6777EF;
+  color: @m-col-b7;
 }
 
 .el-button--primary {
-  color: @fff;
-  background-color: @6777EF;
-  border-color: @6777EF;
-  border: 1px solid @6777EF;
+  color: @m-col-b0;
+  background-color: @m-col-b7;
+  border-color: @m-col-b7;
+  border: 1px solid @m-col-b7;
 }
 
 .el-button--primary:focus,
 .el-button--primary:hover {
-  background: @6777EF;
-  border-color: @6777EF;
-  color: @fff;
+  background: @m-col-b7;
+  border-color: @m-col-b7;
+  color: @m-col-b0;
   opacity: 0.9;
 }
 
 .el-button.is-round {
-  color: @6777EF;
-  background: @F9F8FF;
+  color: @m-col-b7;
+  background: @m-col-b3;
 
   &:hover {
-    border: 1px solid @6777EF;
+    border: 1px solid @m-col-b7;
   }
 }
 
 // table 操作列操作按钮 --删除 红色
 .operate-red-btn {
-  color: @F56C6C !important;
-  background: @FFECEC !important;
+  color: @fun-col-r1 !important;
+  background: @fun-col-r3 !important;
 
   &:hover {
-    border: 1px solid @F56C6C !important;
+    border: 1px solid @fun-col-r1 !important;
   }
 }
 
@@ -564,9 +564,9 @@ iframe {
 
 /**绿色按钮*/
 .admin-green-btn {
-  color: @fff;
-  background-color: @8CC63F;
-  border-color: @8CC63F;
+  color: @m-col-b0;
+  background-color: @fun-col-g2;
+  border-color: @fun-col-g2;
 
   &:hover {
     opacity: 0.8;
@@ -579,31 +579,31 @@ iframe {
 
 /**红色按钮*/
 .admin-red-btn {
-  color: @fff;
-  background-color: @F56C6C;
-  border-color: @F56C6C;
+  color: @m-col-b0;
+  background-color: @fun-col-r1;
+  border-color: @fun-col-r1;
 
   &:hover {
-    background-color: @F56C6C;
-    border-color: @F56C6C;
+    background-color: @fun-col-r1;
+    border-color: @fun-col-r1;
     opacity: 0.8;
   }
 
   &:active {
-    background-color: @F56C6C;
-    border-color: @F56C6C;
+    background-color: @fun-col-r1;
+    border-color: @fun-col-r1;
   }
   &:focus {
-    background-color: @F56C6C;
-    border-color: @F56C6C;
+    background-color: @fun-col-r1;
+    border-color: @fun-col-r1;
   }
 }
 
 /**灰色按钮*/
 .admin-gray-btn {
-  color: @6D6D6D;
-  background-color: @F3F3F3;
-  border-color: @F3F3F3;
+  color: @ph-col-n31;
+  background-color: @ph-col-n5;
+  border-color: @ph-col-n5;
 
   &:hover {
     opacity: 0.8;
@@ -623,35 +623,35 @@ iframe {
 }
 
 .el-table {
-  color: @404040;
+  color: @ph-col-n14;
 }
 
 .el-table--striped .el-table__body tr.el-table__row--striped td {
-  background-color: @F8FAFF;
+  background-color: @m-col-b1;
 }
 
 .el-table--enable-row-hover .el-table__body tr:hover > td {
-  background-color: @F8FAFF;
+  background-color: @m-col-b1;
 }
 
 .el-table--border td,
 .el-table--border th,
 .el-table__body-wrapper .el-table--border.is-scrolling-left ~ .el-table__fixed {
-  border-right: 1px solid @EBEEF5;
+  border-right: 1px solid @ph-col-n3;
 }
 
 .el-table td,
 .el-table th.is-leaf {
-  border-bottom: 1px solid @EBEEF5;
+  border-bottom: 1px solid @ph-col-n3;
 }
 
 .el-table--border,
 .el-table--group {
-  border: 1px solid @fff;
+  border: 1px solid @m-col-b0;
 }
 
 .el-table--border::after {
-  background-color: @fff !important;
+  background-color: @m-col-b0 !important;
 }
 
 .el-table .el-checkbox__inner {
@@ -661,8 +661,8 @@ iframe {
 
 .el-table .el-checkbox__input.is-indeterminate .el-checkbox__inner,
 .el-table .el-checkbox__input.is-checked .el-checkbox__inner {
-  background-color: @6777EF;
-  border-color: @6777EF;
+  background-color: @m-col-b7;
+  border-color: @m-col-b7;
 }
 
 .el-table .el-checkbox__inner::after {
@@ -685,25 +685,25 @@ iframe {
   height: 48px;
 }
 .el-table th.is-leaf {
-  color: @6C757D;
-  background-color: @F1F3F7;
+  color: @ph-col-n10;
+  background-color: @ph-col-n22;
 }
 .el-table--striped .el-table__body tr.el-table__row--striped td.el-table__cell {
-  background-color: @F8FAFF;
+  background-color: @m-col-b1;
 }
 /****查询顶部****/
 .search-table-w {
-  background-color: @fff;
+  background-color: @m-col-b0;
   border-radius: 4px;
 
   .search-title {
     height: 64px;
     line-height: 64px;
     font-size: 18px;
-    color: @34395E;
+    color: @ph-col-n12;
     padding: 0 20px;
     font-weight: bold;
-    border-bottom: 1px solid @EBEEF5;
+    border-bottom: 1px solid @ph-col-n3;
 
     span {
       font-size: 14px;
@@ -725,24 +725,24 @@ iframe {
       cursor: pointer;
       display: inline-block;
       margin-right: 30px;
-      color: @34395E;
+      color: @ph-col-n12;
       font-size: 16px;
       &:hover {
         opacity: 0.8;
       }
       .number {
         margin-left: 5px;
-        color: @F56C6C;
+        color: @fun-col-r1;
         vertical-align: middle;
       }
     }
     .col-select-active {
-      color: @6777EF;
-      border-bottom: 2px solid @6777EF;
+      color: @m-col-b7;
+      border-bottom: 2px solid @m-col-b7;
     }
     /**标题*/
     .s-t-title {
-      color: @34395E;
+      color: @ph-col-n12;
       font-size: 14px;
     }
     /**切换表格标题*/
@@ -758,13 +758,13 @@ iframe {
         position: relative;
         font-size: 16px;
         font-weight: bold;
-        color: @34395E;
+        color: @ph-col-n12;
         padding: 0 20px;
         cursor: pointer;
       }
 
       span.active {
-        color: @6777EF;
+        color: @m-col-b7;
 
         &::after {
           content: "";
@@ -774,7 +774,7 @@ iframe {
           height: 1px;
           // bottom: -20px;
           bottom: 1px;
-          border-bottom: 2px solid @6777EF;
+          border-bottom: 2px solid @m-col-b7;
         }
       }
     }
@@ -786,9 +786,9 @@ iframe {
 
     /**灰色按钮*/
     .gray-btn {
-      color: @34395E;
-      background-color: @F0F0F0;
-      border: 1px solid @F0F0F0;
+      color: @ph-col-n12;
+      background-color: @ph-col-n6;
+      border: 1px solid @ph-col-n6;
     }
 
     /deep/ .el-input {
@@ -815,19 +815,19 @@ iframe {
 
 /******场景-主题风格折叠面板重置*******/
 .drag-collapse {
-  border-top: 0px solid @EBEEF5;
+  border-top: 0px solid @ph-col-n3;
 
   .el-collapse-item__header {
-    color: @34395E;
+    color: @ph-col-n12;
     font-size: 14px;
     position: relative;
     padding-left: 18px;
-    border-bottom: 1px solid @EBEEF5;
+    border-bottom: 1px solid @ph-col-n3;
 
     .el-icon-arrow-right {
       position: absolute;
       left: 0;
-      color: @34395E;
+      color: @ph-col-n12;
 
       &::before {
         content: "\E791";
@@ -836,13 +836,13 @@ iframe {
   }
 
   .el-collapse-item__wrap {
-    border-bottom: 0px solid @EBEEF5;
+    border-bottom: 0px solid @ph-col-n3;
   }
 
   .is-active {
     .el-collapse-item__header,
     .el-icon-arrow-right {
-      color: @6D7CEF;
+      color: @m-col-b10;
     }
   }
 }
@@ -860,11 +860,11 @@ iframe {
 
 .el-dialog__header {
   padding: 8px 20px 8px;
-  border-bottom: 1px solid @EBEEF5;
+  border-bottom: 1px solid @ph-col-n3;
 
   .el-dialog__title {
     font-size: 14px;
-    color: @6C757D;
+    color: @ph-col-n10;
   }
 
   .el-dialog__headerbtn {
@@ -876,16 +876,16 @@ iframe {
 .next-btn {
   width: 100%;
   height: 64px !important;
-  color: @34395E;
+  color: @ph-col-n12;
   font-size: 14px;
-  background-color: @F9FAFC;
+  background-color: @ph-col-n23;
 
   &:hover {
-    background-color: @F5F6FB;
+    background-color: @m-col-b2;
   }
 
   &:active {
-    background-color: @F9FAFC;
+    background-color: @ph-col-n23;
   }
 }
 /****弹窗-选择应用-带radio或check选择 */
@@ -901,28 +901,28 @@ iframe {
     margin-bottom: 8px;
   }
   .active {
-    background-color: @6777EF;
-    color: @fff;
+    background-color: @m-col-b7;
+    color: @m-col-b0;
 
     /deep/ .el-radio__input.is-checked .el-radio__inner {
       border-color: #fff !important;
     }
   }
   .list-box {
-    border: 1px solid @E4E6FC;
+    border: 1px solid @m-col-b4;
     border-radius: 3px;
     display: flex;
     margin-right: 30px;
     margin-bottom: 4px;
     cursor: pointer;
     &:hover {
-      background-color: @6777EF;
-      color: @fff;
+      background-color: @m-col-b7;
+      color: @m-col-b0;
     }
     .radio-box {
       width: 32px;
       padding-top: 10px;
-      border-right: 1px solid @E4E6FC;
+      border-right: 1px solid @m-col-b4;
       align-content: center;
       text-align: center;
 
@@ -937,10 +937,10 @@ iframe {
     }
   }
   .box-active {
-    background-color: @6777EF;
-    color: @fff;
+    background-color: @m-col-b7;
+    color: @m-col-b0;
     /deep/.el-checkbox__input.is-checked .el-checkbox__inner {
-      border-color: @fff;
+      border-color: @m-col-b0;
     }
   }
 }
@@ -948,7 +948,7 @@ iframe {
   font-size: inherit;
 }
 .admin-m-title{
-  color: @6777EF;
+  color: @m-col-b7;
   font-size: 16px;
   font-weight: bold;
   i{
