--- a/src/components/admin/headfoot_set/headfoot_set.less
+++ b/src/components/admin/headfoot_set/headfoot_set.less
@@ -1,5 +1,5 @@
 .content {
-    background-color: @fff;
+    background-color: @m-col-b0;
     border-radius: 4px;
     padding: 20px;
     min-height: 750px;
