--- a/src/components/admin/scene/model/model.less
+++ b/src/components/admin/scene/model/model.less
@@ -39,10 +39,10 @@
       background-color: #f9fafc;
 
       &:hover {
-        background-color: @f3f4ff;
+        background-color: @ph-col-n19;
 
         .d-b-txt {
-          color: @6777EF;
+          color: @m-col-b7;
           overflow: hidden;
           text-overflow: ellipsis;
           white-space: nowrap;
@@ -59,7 +59,7 @@
       font-size: 20px;
       text-align: center;
       display: block;
-      color: @f28102;
+      color: @fun-col-o6;
     }
 
     .img-cover {
@@ -72,7 +72,7 @@
 
     .d-b-txt {
       font-size: 12px;
-      color: @34395E;
+      color: @ph-col-n12;
       text-align: center;
       display: block;
       overflow: hidden;
@@ -93,7 +93,7 @@
       left: -20px;
       right: -20px;
       top: 50px;
-      background-color: @EBEEF5;
+      background-color: @ph-col-n3;
     }
 
     .step-num {
@@ -104,7 +104,7 @@
   .fixed-temp-w {
     margin-top: 10px;
     padding-top: 3px;
-    border-top: 1px solid @EBEEF5;
+    border-top: 1px solid @ph-col-n3;
   }
 }
 
@@ -113,7 +113,7 @@
   background-color: #e3e6ff !important;
 
   .d-b-txt {
-    color: @6777EF  !important;
+    color: @m-col-b7  !important;
   }
 }
 
@@ -232,20 +232,20 @@
       left: -20px;
       right: -20px;
       bottom: 0;
-      background-color: @EBEEF5;
+      background-color: @ph-col-n3;
     }
   }
 
   .s-title {
     font-size: 14px;
-    color: @34395E;
+    color: @ph-col-n12;
     display: block;
     line-height: 30px;
     font-weight: bold;
   }
 
   .bor-botm {
-    border-bottom: 1px solid @EBEEF5;
+    border-bottom: 1px solid @ph-col-n3;
   }
 
   .select-type {
@@ -287,7 +287,7 @@
       }
 
       .temp-name {
-        color: @707070;
+        color: @ph-col-n32;
         position: relative;
         z-index: 2;
         text-shadow: 1px 0px 1px #d7d7d7;
@@ -313,7 +313,7 @@
 
         i.n-check {
           display: inline-block;
-          border: 1px solid @fff;
+          border: 1px solid @m-col-b0;
           border-radius: 50%;
           width: 14px;
           height: 14px;
@@ -337,7 +337,7 @@
         .s-edit {
           font-size: 20px;
           cursor: pointer;
-          color: @6777EF;
+          color: @m-col-b7;
           float: right;
           user-select: none;
           i{
@@ -361,12 +361,12 @@
         width: 100%;
         outline: none;
         border: none;
-        color: @6777EF;
+        color: @m-col-b7;
         font-size: 14px;
         line-height: 40px;
-        background-color: @fff;
+        background-color: @m-col-b0;
         margin-top: 10px;
-        border-bottom: 1px dashed @E4E6FC;
+        border-bottom: 1px dashed @m-col-b4;
 
         i {
           font-size: 14px;
@@ -392,7 +392,7 @@
   color: #34395e;
 
   .name {
-    color: @6D7CEF;
+    color: @m-col-b10;
     font-style: inherit;
   }
 }
@@ -410,7 +410,7 @@
 
   .title {
     font-size: 14px;
-    color: @34395E;
+    color: @ph-col-n12;
     padding-left: 5px;
   }
 }
