--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -16,6 +16,7 @@
     border-radius: 4px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
     height: 100%;
+    z-index:20;
     .drag-content{
       min-height: 550px;
       position: relative;
