--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -123,7 +123,8 @@
           background-color:#fff;
           padding: 30px;
           .scene-warp-bg{
-            background-size: 100% 100% !important;
+            // background-size: 100% 100% !important;
+            background-position: center !important;
           }
           .drag-warp-bg{
             // min-height: 100%;
