--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -14,7 +14,7 @@
   .admin-content{
     background-color: #fff;
     border-radius: 4px;
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
     height: 100%;
     z-index:20;
     .drag-content{
@@ -46,7 +46,7 @@
       .drag-l,.drag-r{
         width: 255px;
         z-index: 2;
-        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
+        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
         .cut-btn{
           cursor: pointer;
           display: block;
@@ -112,13 +112,15 @@
         z-index: 1;
         background-color: #F1F3F7;
         .scaling-right{
-          margin-left: auto;
-          margin-top:30px;
+          position: absolute;
+          right: 0;
+          bottom: 0;
+          z-index: 999;
         }
         .drag-container{
           width: 100%;
           min-width: 430px;//30%
-          height:calc(100% - 80px);
+          height:100%;
           overflow-y: auto;
           background-color:#fff;
           padding: 30px;
