--- a/src/components/admin/scene/model/model.less
+++ b/src/components/admin/scene/model/model.less
@@ -6,7 +6,7 @@
 /**左侧***/
 .drag-l-warp {
   left: 0;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
+  // box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
 
   .cut-btn {
     left: 255px;
@@ -210,7 +210,7 @@
 /**右侧**/
 .drag-r-warp {
   right: 0;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
+  // box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
 
   .cut-btn {
     right: 255px;
