测试空组件

--- a/src/components/admin/scene/scene_set.css
+++ b/src/components/admin/scene/scene_set.css
@@ -293,3 +293,68 @@
   right: 34px;
   transition: right 0.3s ease-in-out;
 }
+.jl_vip_zt_warp_hf {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+#jl_vip_zt_header_warp,
+#jl_vip_zt_header_warp {
+  width: 100%;
+  left: 0;
+  top: 0;
+  position: absolute;
+  z-index: 1;
+}
+.mask-layer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0);
+}
+.jl_vip_zt_del {
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: rgba(255, 255, 255, 0.6);
+  border: 1px solid #e6e9ff;
+  color: red;
+  display: block;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  font-size: 14px;
+  border-radius: 50%;
+  z-index: 150;
+  font-weight: 400;
+  font-style: inherit;
+}
+.jl_vip_zt_del::before {
+  content: "\2716";
+}
+.jl_vip_zt_del:hover {
+  color: #001eff;
+  background-color: #fff;
+}
+.mask-layer-active .mask-layer {
+  border: 3px dashed #001eff;
+}
+.fullScreen {
+  position: fixed !important;
+  z-index: 99999 !important;
+  top: 40px !important;
+  left: 0 !important;
+  right: 0 !important;
+}
+.CloseFullScreen {
+  display: none;
+  position: fixed;
+  z-index: 99999;
+  top: 2px;
+  right: 203px;
+}
