--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -126,7 +126,8 @@
           padding: 30px;
           .scene-warp-bg{
             // background-size: 100% 100% !important;
-            background-position: center !important;
+            background-position: top !important;
+            background-repeat-y: no-repeat !important;
           }
           .drag-warp-bg{
             // min-height: 100%;
