--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -127,7 +127,7 @@
           .scene-warp-bg{
             // background-size: 100% 100% !important;
             background-position: top !important;
-            background-repeat-y: no-repeat !important;
+            background-repeat: no-repeat !important;
           }
           .drag-warp-bg{
             // min-height: 100%;
