logo上传，上传方式封装并采用线程

--- a/src/assets/admin/css/form.less
+++ b/src/assets/admin/css/form.less
@@ -122,6 +122,15 @@
           border: 1px dashed @ph-col-n34;
           position: absolute;
         }
+        .file-input{
+          position: absolute;
+          z-index: 10;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          opacity: 0;
+        }
       }
       /**上传封面**/
       .up-img-cover-img{//预览
