--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -1,14 +1,44 @@
-  /****针对阴影****/
-  .content-collapse{
-    &::after{
-      content: '';
-      top: 0;
-      bottom: 0;
-      width: 1px;
-      left: 0;
-      z-index: 9;
+  // /****针对阴影****/
+  // .content-collapse{
+  //   &::after{
+  //     content: '';
+  //     top: 0;
+  //     bottom: 0;
+  //     width: 1px;
+  //     left: 0;
+  //     z-index: 9;
+  //     position: absolute;
+  //     box-shadow: 2px 0px 5px rgba(0,0,0,.13);
+  //   }
+  // }
+  .fixed-menu-w{
+    height: 50px;
+    line-height: 50px;
+    padding:0 15px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.08);
+    margin-bottom: 5px;
+    position: relative;
+    span{
+      color: #34395E;
+      font-size: 16px;
+      padding:10px 0;
+      margin-right:10px;
+      cursor: pointer;
+      &:hover{
+        color: #6777ef;
+        font-weight: bold;
+        border-bottom:2px solid #6777ef;
+      }
+    }
+    .active{
+      color: #6777ef;
+      font-weight: bold;
+      border-bottom:2px solid #6777ef;
+    }
+    .r-bt{
       position: absolute;
-      box-shadow: 2px 0px 5px rgba(0,0,0,.13);
+      right: 15px;
+      top: 0px;
     }
   }
   .admin-content{
@@ -21,7 +51,7 @@
       min-height: 300px;
       position: relative;
       background-color: #F1F3F7;
-      .drag-l,.drag-c,.drag-r{
+      .drag-c{
         position: absolute;
         bottom: 0;
         top: 0;
@@ -30,7 +60,7 @@
       .drag-l-pad,.drag-r-pad{
         width: 100%;
         height: 100%;
-        min-height: 700px;
+        min-height:500px;
         padding: 0 20px;
         padding-bottom: 20px;
         overflow-y: auto;
@@ -44,9 +74,14 @@
         &::-webkit-scrollbar-resizer {background-color: #ddd;}
       }
       .drag-l,.drag-r{
+        position: fixed;
+        top: 110px;
+        z-index: 9;
+        background: #fff;
         width: 255px;
         z-index: 2;
-        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
+        // box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
         .cut-btn{
           cursor: pointer;
           display: block;
@@ -69,22 +104,11 @@
         }
       }
       .drag-l{
-        left: 0;
+        left:90px;
+        
         .cut-btn{
           left: 255px;
           border-radius: 0px 40px 40px 0px;
-        }
-      }
-      .drag-l-hide{
-        width: 0;
-        .left-check-page{
-          overflow: hidden;
-        }
-        .cut-btn{
-          left: 0;
-        }
-        .drag-l-pad{
-          padding: 0;
         }
       }
       .drag-r{
@@ -94,21 +118,9 @@
           border-radius:40px 0px 0px 40px;
         }
       }
-      .drag-r-hide{
-        width: 0;
-        .right-check-page{
-          overflow: hidden;
-        }
-        .cut-btn{
-          right: 0;
-        }
-        .drag-r-pad{
-          padding: 0;
-        }
-      }
       .drag-c{
-        left: 289px;
-        right: 289px;
+        left: 0;
+        right: 0;
         z-index: 1;
         background-color: #F1F3F7;
         .scaling-right{
@@ -253,14 +265,6 @@
             background: #E4E6FC;
           }
         }
-      }
-      .drag-c-l-tran{
-        left: 34px;
-        transition: left 0.3s ease-in-out;
-      }
-      .drag-c-r-tran{
-        right: 34px;
-        transition: right 0.3s ease-in-out;
       }
     }
   }
