--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -37,8 +37,22 @@
     }
     .r-bt{
       position: absolute;
-      right: 15px;
-      top: 0px;
+      right:7px;
+      top: -17px;
+      top: 0;
+      color: #34395E;
+      i{
+        cursor: pointer;
+        height:50px;
+        line-height: 50px;
+        width: 22px;
+        font-size: 16px;
+        text-align: center;
+        &:hover{
+          font-weight: bold;
+          color: #3E54EE;
+        }
+      }
     }
   }
   .admin-content{
@@ -72,6 +86,9 @@
         &::-webkit-scrollbar-thumb:hover {background-color: #ddd;}
         &::-webkit-scrollbar-corner {background-color: #ddd;}
         &::-webkit-scrollbar-resizer {background-color: #ddd;}
+      }
+      .drag-r-pad{
+        min-height: 200px;
       }
       .drag-l,.drag-r{
         position: fixed;
@@ -112,6 +129,7 @@
         }
       }
       .drag-r{
+        width: 500px;
         right: 0;
         .cut-btn{
           right: 255px;
