完成悬浮菜单拖拽功能

--- a/src/views/admin/scene/scene_set.css
+++ b/src/views/admin/scene/scene_set.css
@@ -108,6 +108,7 @@
 }
 .admin-content .drag-content .drag-l,
 .admin-content .drag-content .drag-r {
+  user-select: none;
   position: fixed;
   top: 110px;
   z-index: 9;
