--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -91,6 +91,7 @@
         min-height: 200px;
       }
       .drag-l,.drag-r{
+        user-select:none;
         position: fixed;
         top: 110px;
         z-index: 9;
