--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -68,7 +68,7 @@
       .drag-c{
         position: absolute;
         bottom: 0;
-        top: 0;
+        top:64px;
         background-color: #fff;
       }
       .drag-l-pad,.drag-r-pad{
@@ -141,7 +141,6 @@
         left: 0;
         right: 0;
         z-index: 1;
-        background-color: #F1F3F7;
         .scaling-right{
           position: absolute;
           right: 10px;
@@ -151,8 +150,8 @@
         .drag-container{
           width: 100%;
           min-width: 430px;//30%
-          height:100%;
-          overflow-y: auto;
+          // min-height:100%;
+          height: auto;
           background-color:#fff;
           padding: 30px;
           .scene-warp-bg{
@@ -183,6 +182,7 @@
         .screen-btn-drag{
           padding:20px 5px;
           padding-bottom: 0;
+          background-color: #F1F3F7;
           .drag-box-warp{
             display: inline-block;
             margin-right: -5px;
