火狐滚动条问题

--- a/src/assets/public/css/public.less
+++ b/src/assets/public/css/public.less
@@ -22,6 +22,7 @@
   -webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust:none;
+  scrollbar-width: thin;
 }
 html,
 body,
